# panopticon

./: .2119.yml  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  TODO.md  alembic.ini  pyproject.toml
.2119/verdicts/: REQ-001.1.1--02ed47954b4d.json  REQ-001.1.1--0d0bb364b129.json  REQ-001.1.1--0f80923f297e.json  REQ-001.1.1--1679246ab88e.json  REQ-001.1.1--322ed4a6945a.json  REQ-001.1.1--478e728a7a9e.json  REQ-001.1.1--4e96c0679737.json  REQ-001.1.1--613f065cedff.json  REQ-001.1.1--6a357a07c5b3.json  REQ-001.1.1--6cbcab3ddb38.json  REQ-001.1.1--74ba638e6b17.json  REQ-001.1.1--81bdca922010.json  REQ-001.1.1--98179ece03f2.json  REQ-001.1.1--a471a1aadc74.json  REQ-001.1.1--baa3aaf57fdc.json  REQ-001.1.1--bb6cf70b689f.json  REQ-001.1.1--bf869b8069f4.json  REQ-001.1.1--c89c4246bf79.json  REQ-001.1.1--c8c5bc2f22f5.json  REQ-001.1.1--ca8565829514.json  REQ-001.1.1--dc4d5869f0d3.json  REQ-001.1.1--e955c8bf8a9d.json  REQ-001.1.1--ed7227e2c9bc.json  REQ-001.1.1--f24efac932f8.json  REQ-001.1.2--1bdb230a4f5b.json  REQ-001.1.2--7b4d7ff4fac3.json  REQ-001.1.2--82943ac5503d.json  REQ-001.1.2--b816f657b5ec.json  REQ-001.1.3--07de0a6f6901.json  REQ-001.1.3--ce2ad20c6314.json  REQ-001.1.4--010d999b4867.json  REQ-001.1.4--ca20b5260f5c.json  REQ-001.1.5--25c531dd960b.json  REQ-001.1.5--e5a1f532b52f.json  REQ-001.1.6--bbb87a8e50ea.json  REQ-001.10.1--0663980098ee.json  REQ-001.10.1--4fc1cfd41ece.json  REQ-001.11.1--4d436cd3743f.json  REQ-001.11.1--871805a45f99.json  REQ-001.12.1--46e17c76b32c.json  (+808 more)
.github/workflows/: 2119.yml  ci.yml  smoke.yml
docker/: Dockerfile  entrypoint.sh
docs/: ARCHITECTURE.md  BACKLOG.md  GOALS.md  PARITY.md  ROADMAP.md  auth.md  container-auth.md  dev.md  harness-and-model-selection.md  layers.md  macos-setup.md  overview.md  repos.md  tasks.md
docs/decisions/: 0001-task-store-format.md  0002-implementation-language.md  0003-task-artifacts.md  0004-workflow-abstraction.md  0005-composable-images.md  0006-task-service.md  0007-secret-store.md  0008-execution-session-topology.md  0010-task-provisioning.md  0011-provisioning-mount-and-repoint.md  0013-m5-remote-execution-mechanics.md
docs/design/: README.md  ROADMAP.md
docs/workflows/: README.md  setup-repo.md
migrations/: env.py
migrations/versions/: 20260619_63c13e069b98_repo_capabilities_and_image_layer.py  20260619_67745f3c1197_task_description.py  20260619_a0a748c95d54_initial_schema.py  20260622_b06a2a841aba_task_url.py  20260623_848d53aeb6c7_rename_task_description_to_memo.py  20260624_89d26e095d05_task_token_estimate.py  20260625_5066c0371860_add_hook_file_to_repo.py  20260630_596be4c1bf2a_add_repo_workflow_preferences.py
specs/: REQ-001-auto-advance-on-responsibilities-met.md  REQ-001-bulk-respawn-down.md  REQ-001-codex-session-scrollback.md  REQ-001-container-git-identity.md  REQ-001-fix-copy-detail.md  REQ-001-harness-cycle-lag.md  REQ-001-launch-model-selector.md  REQ-001-outfitter-auth-dispatch.md  REQ-001-review-task-harness-inequality.md  REQ-001-review-workflow-and-pairing.md  REQ-001-workflow-delete-ux.md  REQ-001-workflow-state-machine.md  REQ-002-harness-cycle-lag.md  REQ-002-review-workflow-and-pairing.md  REQ-002-reviewable-2119-artifacts.md  REQ-002-turn-flip-and-blocked.md  REQ-003-container-status-composition.md  REQ-003-review-task-harness-inequality.md  REQ-004-container-git-identity.md  REQ-004-harness-model-resolution.md  REQ-004-review-gate-wiring.md  REQ-005-outfitter-auth-dispatch.md  REQ-006-bulk-respawn-down.md  REQ-007-fix-copy-detail.md  REQ-008-review-gate-wiring.md  REQ-008-stale-attention-signals.md  REQ-009-auto-advance-on-responsibilities-met.md  REQ-009-codex-session-scrollback.md  REQ-009-gh-in-base-containers.md  REQ-009-harness-cycle-lag.md  REQ-009-hook-fail-open.md  REQ-009-launch-model-selector.md  REQ-009-rename-task-slug.md  REQ-009-review-gate-wiring.md  REQ-009-reviewable-2119-artifacts.md  REQ-009-session-context-footer.md  REQ-009-workflow-state-machine.md  REQ-010-harness-cycle-lag.md  REQ-010-turn-flip-and-blocked.md  REQ-011-container-status-composition.md  (+5 more)
src/panopticon/: __init__.py  client.py
tests/: test_acceptance.py  test_agent.py  test_agents_md.py  test_api.py  test_artifacts.py  test_attach.py  test_briefing.py  test_change_feed.py  test_client.py  test_clones.py  test_console.py  test_daemon.py  test_dashboard.py  test_discovery.py  test_entrypoint.py  test_git.py  test_github_peer_reviewed.py  test_github_self_reviewed.py  test_home_migration.py  test_hooks.py  test_host.py  test_images.py  test_liveness_connection.py  test_local_git_self_reviewed.py  test_local_runner.py  test_mcp.py  test_migrations.py  test_models.py  test_multi_workflow_acceptance.py  test_orchestrator.py  test_parity.py  test_prefill.py  test_pricing.py  test_provisioner.py  test_provisioning_acceptance.py  test_restart.py  test_runner.py  test_runner_liveness.py  test_server.py  test_service.py  (+9 more)
tests/acceptance/: test_acceptance.py  test_multi_workflow_acceptance.py  test_provisioning_acceptance.py  test_skeleton.py
tests/container/: test_agent.py  test_config.py  test_entrypoint.py  test_hooks.py  test_pricing.py  test_skills.py
tests/core/: test_briefing.py  test_dirs.py  test_git.py  test_models.py  test_store.py  test_task.py  test_workflow.py
tests/harnesses/: test_claude.py  test_claude_skills.py  test_codex.py  test_config.py  test_outfitter.py  test_pi.py  test_registry.py
tests/sessionservice/: test_clones.py  test_daemon.py  test_executions.py  test_home_migration.py  test_host.py  test_images.py  test_liveness_connection.py  test_local_runner.py  test_provisioner.py  test_runner_liveness.py  test_shell_runner.py  test_spawn.py  test_spawner.py
tests/taskservice/: test_api.py  test_change_feed.py  test_client.py  test_mcp.py  test_migrations.py  test_review_gate.py  test_review_gate_fallback.py  test_review_gate_pairing.py  test_server.py  test_service.py
tests/terminal/: test_attach.py  test_cli.py  test_console.py  test_dashboard.py  test_doctor.py  test_quickstart.py  test_setup_repo_task.py  test_terminal.py
(+121 files in other folders)
