[project]
name = "panopticon"
version = "0.0.1"
description = "Orchestrate multiple coding agents across isolated tasks and configurable workflows."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "sqlalchemy>=2.0.50",
    "alembic>=1.18.4",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "textual>=8.2.7",
    "mcp>=1.27.2",
]

[project.scripts]
panopticon = "panopticon.terminal.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "mypy>=1.11",
    "pytest-asyncio>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/panopticon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"  # Textual's run_test() pilot uses async tests

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
